# ipa_camera_detection

./: CMakeLists.txt  README.md  frames.gv  package.xml
cfg/: Threshold.cfg
include/hough_circle/: hough_circle.h
launch/: circle_detection.launch
rviz/: rviz_config.rviz
script/: pose_estimation.py
src/: hough_circle.cpp  hough_circle_node.cpp  hough_generalized.cpp  pose_estimation.cpp
